	* arch/arm/src/stm32f7:  Add an STM32 F7 Ethernet driver (2015-07-20).
	* arch/arm/src/stm32f7:  Port the STM32 F4 DMA driver.  Untested on
	  initial commit (2015-07-20).
	* arch/arm/src/sam34: Correct some problems with SAM3/4 watchdog driver.
	  Includes some small improvements.  From Max Neklyudov (2015-07-21).
	* arch/arm/src/stm32 and include/stm32:  Add support for the STMicro
	  STM32 F446.  From David Sidrane (2015-07-22).
	* include/nuttx/sched.h, sched/, and fs/procfs:  Increase the size of
	  the scheduling policy field from 1 to 2 bits to allow additional,
	  planned scheduling policies (2015-07-23).
	* pthread_create: Fix an (unlikely) error in fallback value in the
	  event of a failure (which should never occur) (2015-07-23).
	* include/, sched/, and libc/: Add support for sporadic scheduling
	  parameters in struct sched_param, posix_spawnattr_t, and pthread_attr_t.
	  Update all user interfaces to pass sporadic scheduling parameters.
	  (2015-07-23).
	* sched/: Separate the round-robin logic into a separate file so that
	  it is symmetric with the sporadic stuff.  Integrate the sporadic
	  scheduler into the time tick interrupt handling and into the tickless
	  operation (2015-07-24).
	* arch/arm/src/moxart/: Add support for MoxaRT SoC found in the most
	  Moxa serial converters such as NP51x0, NP66xx, UC72xx.  From Anton
	  D. Kachalov (2015-07-29).
	* configs/moxa: Moxa NP51x0 series of 2-port advanced RS-232/422/485
	  serial device servers.  From Anton D. Kachalov (2015-07-29).
	* drivers/net/ and include/nuttx/net: Add support for a Faraday
	* FTMAC100 Ethernet MAC Driver.  From Anton D. Kachalov (2015-07-29).
	* 16550 UART Driver: Add a configuration option to indicate the the
	  THR empty bit is inverted.  This is the the case for the moxART SoC.
	  Based comments from Anton D. Kachalov (2015-07-29).
	* STM32 F4:  Add DMA support to the ADC driver for STM32 F4.  From
	  Max Kriegler (2015-07-30).
